--- a/project.html
+++ b/project.html
@@ -32,15 +32,31 @@
                 </tr>
                 <!--2023 PROJECTS-->
                 <tr>
-                    <td>
+                    <td> Salon Sales and Stock Management System
+                        <a href="https://www.veryperi.online/vp-admin/" target="_blank"> <br> [web system] </a></td>
+                    <td> Capstone project for a simple general Salon Sales and Stock Management System.
+                    <td> HTML, CSS, PHP, JS
+                    <td>September 2023</td>
+                </tr>
+
+                <tr>
+                    <td> Hair and Beauty Salon Website
+                        <a href="https://www.veryperi.online/vp-website/" target="_blank"> <br> [website] </a></td>
+                    <td> Capstone project for a general Hair and Beauty Salon Website.
+                    <td> HTML, CSS, PHP, JS
+                    <td>September 2023</td>
+                </tr>
+
+                <tr>
+                    <td> Basic Operations
                         <a href="https://onlinegdb.com/34jzHGpeQ" target="_blank"> <br> [src code] </a></td>
-                    <td> A project in Python that deals with basic operations (add,edit,delete).
+                    <td> A project in Python that deals with basic operations (add, edit, delete).
                     <td> PYTHON
                     <td>October 2023</td>
                 </tr>
 
                 <tr>
-                    <td>
+                    <td> 6/42 Lotto
                         <a href="https://onlinegdb.com/GaKwjXqcP" target="_blank"> <br> [src code] </a></td>
                     <td> A project in Python that draws 6/42 lotto.
                     <td> PYTHON
