--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
                 <tr>
                     <td> Salon Sales and Stock Management System
                         <a href="https://www.veryperi.online/vp-admin/" target="_blank"> <br> [web system] </a></td>
-                    <td> Capstone project for a simple general Salon Sales and Stock Management System.
+                    <td> Capstone project for a simple general Salon Sales and Stock Management System. For the username and password, you may contact me in my gmail.
                     <td> HTML, CSS, PHP, JS
                     <td>September 2023</td>
                 </tr>
